[package]
name = "common"
version = "0.1.0"
authors = ["Nextensio <team@nextensio.net>"]
edition = "2018"

[dependencies]
log = "0.4.14"
object-pool = { git = "https://github.com/gopakumarce/object-pool.git", branch = "gopa-objpool" }
native-tls = "0.2"
prost = "0.7"
etherparse = "0.9.0"
httparse = "1.3.5"
mio = {version = "0.7", features = ["os-poll", "net", "os-util"]}

[build-dependencies]
prost-build = { version = "0.7" }
