[package]
name = "fd"
version = "0.1.0"
authors = ["Nextensio <team@nextensio.net>"]
edition = "2018"

[dependencies]
libc = {version = "0.2"}
object-pool = { git = "https://github.com/nextensio/object-pool.git", branch = "nextensio-alpha" }
mio = {version = "0.7.14", features = ["os-poll", "net", "os-util"]}
common = { path = "../../common" }
