[package]
name = "l3proxy"
version = "0.1.0"
authors = ["Nextensio <team@nextensio.net>"]
edition = "2018"

[dependencies]
object-pool = { git = "https://github.com/gopakumarce/object-pool.git", branch = "gopa-objpool" }
managed = { version = "0.7" }
smoltcp = { git = "https://github.com/gopakumarce/smoltcp.git", branch = "nextensio-alpha", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "socket-tcp", "socket-udp", "log", "verbose"] }
common = { path = "../../common" }
