[package]
name = "netconn"
version = "0.1.0"
authors = ["Nextensio <team@nextensio.net>"]
edition = "2018"

[dependencies]
object-pool = { git = "https://github.com/nextensio/object-pool.git", branch = "nextensio-alpha" }
mio = {git = "https://github.com/nextensio/mio.git", branch = "nextensio-alpha", features = ["os-poll", "net"]}
common = { path = "../../common" }
