[package]
name = "winpipe"
version = "0.1.0"
authors = ["Nextensio <team@nextensio.net>"]
edition = "2018"

[dependencies]
log = "0.4.14"
object-pool = { git = "https://github.com/nextensio/object-pool.git", branch = "nextensio-alpha" }
mio = {version = "0.7", features = ["os-poll", "net", "os-util"]}
common = { path = "../../common" }
